--- a/Examples/VarioCorreKrige_variofit_correfit_examples.ipynb
+++ b/Examples/VarioCorreKrige_variofit_correfit_examples.ipynb
@@ -71,8 +71,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-20T02:43:40.328081Z",
-     "start_time": "2025-08-20T02:43:40.061417Z"
+     "end_time": "2025-08-20T04:11:51.795150Z",
+     "start_time": "2025-08-20T04:11:50.915835Z"
     }
    },
    "cell_type": "code",
@@ -80,11 +80,24 @@
     "from VarioCorreKrigE.variofit import variofit, variofitmulti\n",
     "from VarioCorreKrigE.variofit import powered_exponential\n",
     "from VarioCorreKrigE.correfit import correfit, correfitmulti\n",
-    "from VarioCorreKrigE.utils import compute_distance_weights, theta_from_params"
+    "from VarioCorreKrigE.utils import compute_distance_weights, theta_from_params\n",
+    "from VarioCorreKrigE.variofit import VARIOGRAM_MODELS\n",
+    "from VarioCorreKrigE.correfit import CORRELATION_MODELS\n",
+    "print('list of variogram model: ', VARIOGRAM_MODELS)\n",
+    "print('list of correlation models: ', CORRELATION_MODELS)"
    ],
    "id": "c001fc6128737aeb",
-   "outputs": [],
-   "execution_count": 2
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "list of variogram model:  {'spherical': <function spherical at 0x00000142C2EBEE80>, 'exponential': <function exponential at 0x00000142C2EBF100>, 'gaussian': <function gaussian at 0x00000142C2EBF2E0>, 'cubic': <function cubic at 0x00000142C2EBF380>, 'powered_exponential': <function powered_exponential at 0x00000142C2EBF420>, 'matern': <function matern at 0x00000142C2EBF4C0>, 'damped_cosine_angle': <function damped_cosine_angle at 0x00000142C2EBF560>, 'angular_dissimilarity': <function angular_dissimilarity at 0x00000142C2EBF600>}\n",
+      "list of correlation models:  {'spherical': <function spherical at 0x00000142C3912160>, 'exponential': <function exponential at 0x00000142C3912200>, 'gaussian': <function gaussian at 0x00000142C39122A0>, 'cubic': <function cubic at 0x00000142C3912340>, 'powered_exponential': <function powered_exponential at 0x00000142C39123E0>, 'matern': <function matern at 0x00000142C3912480>, 'damped_cosine_angle': <function damped_cosine_angle at 0x00000142C3912520>, 'angular_dissimilarity': <function angular_dissimilarity at 0x00000142C39125C0>}\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "metadata": {},
